# vlm-offline-eval-benchmark

./: .dockerignore  Dockerfile  README.md  docker-run.sh  filter_metadata.py  llm_judge.py  main.py  pyproject.toml  script.py
scripts/: analyze_intelligence.py  patch_ft_checkpoint.py  show_video_result.py  test_analyze_intelligence.py
src/intelligence_eval/: __main__.py  config.py  dataset.py  runner.py
src/realtime_eval/: __main__.py
src/realtime_eval/core/: config.py
src/realtime_eval/pipeline/: sweep.py  sweep_vllm.py
src/vlm_eval/: config.py
src/vlm_eval/inference/: gemma.py
utils/: llm.py
