[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-benchmark"
version = "0.1.0"
description = "Video VLM benchmark and LLM-as-a-judge tooling"
# Capped at <3.13: torch 2.5.1+cu121 Windows wheels only go up to cp312.
requires-python = ">=3.10,<3.13"
dependencies = [
  "transformers>=4.41",
  "accelerate>=0.30",
  "decord>=0.6.0",
  "numpy>=1.24",
  "Pillow>=9.5",
  "openai>=1.0.0",
  "datasets>=2.14",
  "python-dotenv>=1.0.0",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
]

[project.scripts]
vlm-benchmark = "vlm_eval.cli:benchmark_main"
vlm-judge = "vlm_eval.cli:judge_main"
vlm-batch = "vlm_eval.cli:batch_main"
vlm-gpu-test = "vlm_eval.cli:gpu_test_main"

realtime-bench = "realtime_eval.__main__:main"

intelli-bench = "intelligence_eval.__main__:main"
intelligence-bench = "intelligence_eval.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# Force uv to resolve wheels for both Windows and Linux x86_64 (CUDA 12.1 builds),
# otherwise the lock only contains the platform it was first resolved on.
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
# CUDA 12.1 wheels on Windows (win_amd64) and Linux; macOS falls back to PyPI.
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
